--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,10 @@
             android:name="com.kt.SmartStamp.activity.TermsActivity"
             android:screenOrientation="portrait" />
 
+        <activity
+            android:name="com.kt.SmartStamp.activity.DetailReadyActivity"
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
