--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,10 @@
             android:screenOrientation="portrait" />
 
         <activity
+            android:name="com.kt.SmartStamp.activity.ConnectAdminActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
             android:name="com.kt.SmartStamp.activity.MainActivity"
             android:screenOrientation="portrait" />
 
