모니터링 페이지 개발

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,10 @@
             android:screenOrientation="portrait" />
 
         <activity
+            android:name="com.kt.SmartStamp.activity.DetailHistoryActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
             android:name=".activity.ActivityImageSelector"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.Sub" />
