보안성검토 대비

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,11 +18,11 @@ android {
         }
     }
 
-    /*applicationVariants.all { variant ->
+    applicationVariants.all { variant ->
         variant.javaCompileProvider.get().doLast {
             runAllatori(variant)
         }
-    }*/
+    }
 }
 
 dependencies {
